# clinicos-demo-backend

./: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
config/: settings.py
core/: admin.py  models.py  serializers.py  urls.py  views.py
